# cuda-hmm

./: .gitignore  CMakeLists.txt  README.md  generate_test_configs.py  hmm_reference.py  optimize.txt  setup.sh  test_hmm.py  test_hmm_gpu_runner.py
.cache/clangd/index/: main.cpp.9B6C98CA7B4A09FB.idx
.github/workflows/: c-cpp.yml
include/: data_loader.hpp  hmm.hpp  hmm_cuda.hpp  hmm_gpu.cuh  hmm_utils.hpp
scripts/: download_data.sh
src/: main.cpp  main_gpu.cpp  viterbi.cpp
src/hmm/: hmm_gpu.cu  hmm_impl.cpp  hmm_impl.cu
test_configs/: chmm_example.cfg  coin_flip.cfg  simple_2x2.cfg  simple_3x3.cfg  simple_4x2.cfg  weather.cfg
tests/: test_benchmark.cpp  test_hmm.cpp  test_hmm_cu.cpp  test_hmm_gpu.cpp
